Add DataModel, DataRepository and DataService Projects

--- a/Display/Pages/Shared/_Layout.cshtml
+++ b/Display/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <div class="container-fluid">
                 <!-- logo -->
                 <div class="navbar-header">
-                    <a class="navbar-brand" asp-page="/Index"><img src="~/logo.jpg" width="216" height="75"/></a>
+                    <a class="navbar-brand" asp-page="/Index"><img src="~/uva_horiz_rgb_ko.png" width="216"/></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
