--- a/Display/Pages/Explorer.cshtml
+++ b/Display/Pages/Explorer.cshtml
@@ -5,21 +5,42 @@
 }
 
 <div class="row overflow-auto" style="height: 75vh;">
-    <div class="col-md-2">
-        <div class="btn-group-vertical">
-            @foreach (var button in Model.MenuButtons)
+    <div class="col-md-2 background" style="padding-right: 0px;">
+        <div id="accordionGrp">
+            @foreach (var button in Model.MenuGroupButtons)
             {
-                <button type = "button" class="btn btn-success" @(button.IsDisabled ? "disabled" : "") onclick = "setURL('@button.Url')" data-toggle="tooltip" data-placement="bottom" title="@button.ToolTip">@button.ButtonText</button>
+                <div class="card" style="width: 100%; padding: 0px; border: 0px; border-radius: 0px;">
+                    <div class="card-header background" style="padding: 0px; border: 0px; border-radius: 0px;">
+                        <button type="button" class="btn btn-menu-left" @(button.IsDisabled ? "disabled" : "") style="margin: 0px; width: 100%;" data-toggle="collapse" href="#@button.ButtonTextNoSpace" data-toggle="tooltip" data-placement="bottom" title="@button.ToolTip">@button.ButtonText</button>
+                    </div>
+                    <div class="card-body collapse background" data-parent="#accordionGrp" id="@button.ButtonTextNoSpace" style="padding-left: 10px; padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
+                        <div id="accordionRep_@button.ButtonTextNoSpace">
+                            @foreach (var report in button.MenuButtons)
+                            {
+                                <div class="card" style="width: 100%">
+                                    <div class="card-header background" style="padding: 0px;">
+                                        <button type="button" class="btn btn-menu-left" @(report.IsDisabled ? "disabled" : "") style="margin: 0px; width: 100%;" onclick="setURL('@report.Url')" data-toggle="collapse" href="#@report.ButtonTextNoSpace" data-toggle="tooltip" data-placement="bottom" title="@report.ToolTip">@report.ButtonText</button>
+                                    </div>
+                                    <div class="card-body collapse background" data-parent="#accordionRep_@button.ButtonTextNoSpace" id="@report.ButtonTextNoSpace" style="padding-left: 10px; padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
+                                        <div >
+                                            Test
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
             }
-            <br />
-            <form method="post">
-                @foreach (var auth in Model.AuthMethods)
-                {
-                    <input type="radio" asp-for="Authentication" value="@auth" />@auth<br />
-                }
-                <input type="submit" />
-            </form>
         </div>
+        @*<br />
+        <form method="post">
+            @foreach (var auth in Model.AuthMethods)
+            {
+                <input type="radio" asp-for="Authentication" value="@auth" />@auth<br />
+            }
+            <input type="submit" />
+        </form>*@
     </div>
     <div class="col-md-10">
         <iframe style="border: 0; position:relative; width:100%; height:100%" src="@ViewBag.IFrameSrc" id="iframe"></iframe>
