--- a/Display/Pages/Shared/_Layout.cshtml
+++ b/Display/Pages/Shared/_Layout.cshtml
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-default border-bottom box-shadow mb-3" role="navigation">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-default border-bottom box-shadow" role="navigation">
             <div class="container-fluid">
                 <!-- logo -->
                 <div class="navbar-header">
-                    <a class="navbar-brand" asp-page="/Index"><img src="~/uva_horiz_rgb_ko.png" width="216"/></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    <a class="navbar-brand" asp-page="/Index"><img src="~/logo-uvimco.png" width="350"/></a>
+                    <button class="btn btn-menu-navbar navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -43,7 +43,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="flex-container" style="margin-left: 0px; margin-right: 0px; margin-top: 0px; padding-left:0px; padding-right: 0px; width: 100%">
         @RenderBody()
     </div>
 
