--- a/Display/Pages/Shared/_Layout.cshtml
+++ b/Display/Pages/Shared/_Layout.cshtml
@@ -24,19 +24,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" asp-page="/Index">Home</a>
+                            <a class="nav-link navbar-text" asp-page="/Index" data-toggle="tooltip" data-placement="bottom" title="Return to the Main Page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" asp-page="/DataLoader">Data Loader</a>
+                            <a class="nav-link navbar-text" asp-page="/DataLoader" data-toggle="tooltip" data-placement="bottom" title="Place holder for Data Loader">Data Loader</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" asp-page="/Creator">Data Entry</a>
+                            <a class="nav-link navbar-text" asp-page="/Creator" data-toggle="tooltip" data-placement="bottom" title="Place holder for Data Entry screens">Data Entry</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" asp-page="/Explorer">Data Viewer</a>
+                            <a class="nav-link navbar-text" asp-page="/Reports" data-toggle="tooltip" data-placement="bottom" title="View the Reports screen">Data Viewer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" asp-page="/Company">Reports</a>
+                            <a class="nav-link navbar-text" asp-page="/Privacy" data-toggle="tooltip" data-placement="bottom" title="View this applications Privacy policy">Privacy</a>
                         </li>
                     </ul>
                 </div>
