-- Add PerformanceIndicator Prototype report

--- a/Display/Pages/Shared/_Layout.cshtml
+++ b/Display/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             <a class="nav-link navbar-text" asp-page="/Creator" data-toggle="tooltip" data-placement="bottom" title="Place holder for Data Entry screens">Data Entry</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" asp-page="/Reports" data-toggle="tooltip" data-placement="bottom" title="View the Reports screen">Data Viewer</a>
+                            <a class="nav-link navbar-text" asp-page="/Reports" data-toggle="tooltip" data-placement="bottom" title="View the Reports page">Data Viewer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link navbar-text" asp-page="/Privacy" data-toggle="tooltip" data-placement="bottom" title="View this applications Privacy policy">Privacy</a>
