--- a/Display/Pages/Privacy.cshtml
+++ b/Display/Pages/Privacy.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewBag.Title = "Privacy Policy";
 }
-<h1 class="text-center view-menubar">@ViewData["Title"]</h1>
-
+    <h1 class="text-center">Privacy Policy</h1>
+<hr />
 <p class="text-center">Use this page to detail your site's privacy policy.</p>
