--- a/Display/wwwroot/css/site.css
+++ b/Display/wwwroot/css/site.css
@@ -116,11 +116,38 @@ button.accept-policy {
 /* Custom styling */
 
 .view-menubar {
-    background-image: linear-gradient(var(--primaryColor), white);
+    background-image: linear-gradient(var(--backgroundColor), white);
     /*background-color: lightskyblue;*/
 }
 
 .view-menubar-reverse {
-    background-image: linear-gradient(white, var(--primaryColor));
+    background-image: linear-gradient(white, var(--backgroundColor));
     /*background-color: lightskyblue;*/
+}
+
+.view-component-header {
+    background-color: var(--backgroundColor);
+}
+
+.view-component-footer {
+    background-color: var(--backgroundColor);
+}
+
+.spinner {
+    display: inline-block;
+    opacity: 0;
+    max-width: 0;
+    -webkit-transition: opacity 0.25s, max-width 0.45s;
+    -moz-transition: opacity 0.25s, max-width 0.45s;
+    -o-transition: opacity 0.25s, max-width 0.45s;
+    transition: opacity 0.25s, max-width 0.45s; /* Duration fixed since we animate additional hidden width */
+}
+
+.has-spinner.active {
+    cursor: progress;
+}
+
+.has-spinner.active .spinner {
+    opacity: 1;
+    max-width: 50px; /* More than it will ever come, notice that this affects on animation duration */
 }
